--- a/src/app/features/decisions/decisions.html
+++ b/src/app/features/decisions/decisions.html
@@ -1,8 +1,4 @@
-<table
-  mat-table
-  [dataSource]="dataSource"
-  class="mat-elevation-z2"
->
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z2">
   <!-- Title Column -->
   <ng-container matColumnDef="title">
     <th mat-header-cell *matHeaderCellDef>Title</th>
@@ -18,21 +14,33 @@
   </ng-container>
 
   <!-- Rating Column -->
-  <ng-container matColumnDef="rating">
-    <th mat-header-cell *matHeaderCellDef>Rating</th>
-    <td mat-cell *matCellDef="let decision">{{ decision.rating }}</td>
+  <ng-container matColumnDef="priority">
+    <th mat-header-cell *matHeaderCellDef>Priority</th>
+    <td mat-cell *matCellDef="let decision">
+    <span class="badge-priority" [ngClass]="'priority-' + decision.priority">
+        {{ decision.priority }}
+    </span>
+    </td>
   </ng-container>
 
   <!-- Risk Factor Column -->
   <ng-container matColumnDef="riskFactor">
     <th mat-header-cell *matHeaderCellDef>Risk</th>
-    <td mat-cell *matCellDef="let decision">{{ decision.riskFactor }}</td>
+    <td mat-cell *matCellDef="let decision">
+      <span class="badge-risk" [ngClass]="'risk-' + decision.riskFactor">
+        {{ decision.riskFactor }}
+      </span>
+    </td>
   </ng-container>
 
   <!-- Feasibility Column -->
   <ng-container matColumnDef="feasibility">
     <th mat-header-cell *matHeaderCellDef>Feasibility</th>
-    <td mat-cell *matCellDef="let decision">{{ decision.feasibility }}</td>
+    <td mat-cell *matCellDef="let decision">
+      <span class="badge-feasibility" [ngClass]="'feasibility-' + decision.feasibility">
+        {{ decision.feasibility }}
+      </span>
+    </td>
   </ng-container>
 
   <!-- Actions Column -->
