--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,7 @@
+<mat-toolbar color="primary" class="app-header">
+  <span class="app-title">Decision Tracker</span>
+</mat-toolbar>
+
 <div class="main-container">
   <router-outlet />
 </div>
