--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -4,3 +4,18 @@
   margin: 0 auto;
   box-sizing: border-box;
 }
+
+.app-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 16px;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+}
+
+.app-title {
+  font-size: 1.25rem;
+  font-weight: 500;
+}
