Decision new: added new decision component, fixed firestore timestamp to date object issue

--- a/src/app/features/decision-new/decision-new.html
+++ b/src/app/features/decision-new/decision-new.html
@@ -1,4 +1,4 @@
-<app-page-header   [title]="'Edit Decision'"
+<app-page-header   [title]="'Create Decision'"
   [showBackButton]="true"
   (back)="goBack()"></app-page-header>
 
