--- a/src/app/features/decisions/decisions.html
+++ b/src/app/features/decisions/decisions.html
@@ -1,3 +1,9 @@
+<app-page-header
+  [title]="'Decision List'"
+  [showNewButton]="true"
+  (new)="createNewDecision()"
+></app-page-header>
+
 <div class="decisions-container">
   <table
     mat-table
