--- a/src/app/features/decisions/decisions.html
+++ b/src/app/features/decisions/decisions.html
@@ -65,7 +65,9 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let decision">
-        <button matButton="outlined" (click)="editDetails(decision)">Edit</button>
+        <button matButton="outlined" (click)="editDetails(decision)">
+          Edit
+        </button>
       </td>
     </ng-container>
 
@@ -147,4 +149,11 @@
       *matRowDef="let row; columns: ['expandedDetail'];"
     ></tr>
   </table>
+
+  <mat-paginator
+    [pageSize]="10"
+    [pageSizeOptions]="[10, 20, 30, 40, 50]"
+    showFirstLastButtons
+  >
+  </mat-paginator>
 </div>
