Decision delete: Added delete decision button in decision table, added MatDialog to ensure safe delete operation

--- a/src/app/features/decisions/decisions.scss
+++ b/src/app/features/decisions/decisions.scss
@@ -10,6 +10,11 @@
   }
 }
 
+.action-buttons {
+  display: flex;
+  align-items: center;
+}
+
 @function risk-color($value) {
   @if $value == 1 {
     @return #4caf50;
