--- a/src/app/features/decisions/decisions.html
+++ b/src/app/features/decisions/decisions.html
@@ -65,9 +65,18 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let decision">
-        <button matButton="outlined" (click)="editDetails(decision)">
-          Edit
-        </button>
+        <div class="action-buttons">
+          <button matButton="outlined" (click)="editDetails(decision)">
+            Edit
+          </button>
+          <button
+            mat-icon-button
+            color="warn"
+            (click)="confirmDelete(decision)"
+          >
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
       </td>
     </ng-container>
 
